[package]
name = "hporecord"
version = "0.0.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"
description = "A common format to record hyperparameter optimization results"
homepage = "https://github.com/sile/hporecord"
repository = "https://github.com/sile/hporecord"
readme = "README.md"
license = "MIT"

[badges]
coveralls = {repository = "sile/hporecord"}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"  # TODO: Use `thiserror` instead
serde = {version="1", features=["derive"]}
serde_json = "1"
